<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:fitsSystemWindows="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:expandedTitleGravity="center"
            app:layout_scrollFlags="scroll">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/bluePrimary"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivUser"
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    android:contentDescription="@string/imageUser"
                    android:layout_marginTop="@dimen/dimens8"
                    android:background="@drawable/ic_user"
                    android:scaleType="centerCrop"
                    />

                <TextView
                    android:id="@+id/txtUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimens8"
                    android:layout_marginStart="@dimen/dimens16"
                    android:layout_marginEnd="@dimen/dimens16"
                    tools:text="@string/username"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimens18Text"
                    android:maxLines="1"
                    android:ellipsize="end"
                    />

                <TextView
                    android:id="@+id/txtBio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimens8"
                    android:layout_marginBottom="@dimen/dimens8"
                    android:layout_marginStart="@dimen/dimens16"
                    android:layout_marginEnd="@dimen/dimens16"
                    tools:text="@string/bio"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimens18Text"
                    android:maxLines="1"
                    android:ellipsize="end"
                    />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginStart="@dimen/dimens16"
                    android:layout_marginEnd="@dimen/dimens16"
                    android:layout_marginBottom="@dimen/dimens16"
                    app:cardCornerRadius="@dimen/dimens16">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:padding="@dimen/dimens8">

                        <!-- Follower-->
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/follower"
                                android:textSize="@dimen/dimens18Text"
                                android:textColor="@color/black"
                                />

                            <TextView
                                android:id="@+id/txtFollower"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="@string/dummyData"
                                android:textSize="@dimen/dimens18Text"
                                android:textColor="@color/black"
                                android:maxLines="1"
                                />

                        </LinearLayout>

                        <!-- Following-->
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/following"
                                android:textSize="@dimen/dimens18Text"
                                android:textColor="@color/black"
                                />

                            <TextView
                                android:id="@+id/txtFollowing"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="@string/dummyData"
                                android:textSize="@dimen/dimens18Text"
                                android:textColor="@color/black"
                                android:maxLines="1"
                                />

                        </LinearLayout>

                        <!-- Repository-->
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/repository"
                                android:textSize="@dimen/dimens18Text"
                                android:textColor="@color/black"
                                />

                            <TextView
                                android:id="@+id/txtRepository"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="@string/dummyData"
                                android:textSize="@dimen/dimens18Text"
                                android:textColor="@color/black"
                                android:maxLines="1"
                                />

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>